--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -1,2 +1,15 @@
 server:
   port: 8081
+spring:
+  datasource:
+    url: jdbc:h2:file:./target/h2db/db/info-currency;DB_CLOSE_DELAY=-1
+    name:
+    username: info-currency
+    password:
+  h2:
+    console:
+      enabled: false
+  jpa:
+    database-platform: pl.lodz.p.zzpj.domain.util.FixedH2Dialect
+    database: H2
+    show-sql: true
