--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -1,2 +1,11 @@
 server:
   port: 8082
+spring:
+  datasource:
+    url: jdbc:mariadb://localhost:3306/icurrency
+    username: currency
+    password: currency
+    driver-class-name: org.mariadb.jdbc.Driver
+  jpa:
+      database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+      database: MYSQL
