added first rest controller, first homepage for guest with view and bootstrap applied

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>pl.lodz.p.zzpj</groupId>
     <artifactId>info-currency</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>info-currency</name>
     <description>Demo project for Spring Boot</description>
@@ -58,6 +58,19 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mustache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.2</version>
         </dependency>
     </dependencies>
 
