--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -2,7 +2,7 @@ server:
   port: 8081
 spring:
   datasource:
-    url: jdbc:h2:file:./target/h2db/db/info-currency;DB_CLOSE_DELAY=-1
+    url: jdbc:h2:file:./target/h2db/db/info-currency;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1
     name:
     username: info-currency
     password:
