Added user management

--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -9,3 +9,8 @@ spring:
   jpa:
       database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
       database: MYSQL
+  mail:
+    host: localhost
+    port: 25
+    username:
+    password:
