--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -13,3 +13,22 @@ spring:
     database-platform: pl.lodz.p.zzpj.domain.util.FixedH2Dialect
     database: H2
     show-sql: true
+    properties:
+      hibernate.cache.use_second_level_cache: false
+      hibernate.cache.use_query_cache: false
+      hibernate.generate_statistics: true
+    hibernate:
+      ddl-auto: create
+  data:
+    elasticsearch:
+      cluster-name:
+      cluster-nodes:
+      properties:
+        path:
+          logs: target/elasticsearch/log
+          data: target/elasticsearch/data
+  mail:
+    host: localhost
+    port: 25
+    username:
+    password:
