Added login page

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -24,6 +24,11 @@ spring:
     port: 25
     username:
     password:
+  devtools:
+    livereload:
+      enabled: true
+    restart:
+      enabled: true
 icurrency:
   security:
     authentication:
